--- a/src/components/Sites/Home/HeroSection.css
+++ b/src/components/Sites/Home/HeroSection.css
@@ -16,23 +16,19 @@
   width: 100%;
   height: 100%;
   z-index: 1;
-  background-image: linear-gradient(
-      0deg,
+  background-image: linear-gradient(0deg,
       var(--theme-info) 10%,
       rgba(0, 0, 0, 0) 40%,
       rgba(0, 0, 0, 0) 70%,
-      var(--theme-info) 100%
-    ),
-    linear-gradient(
-      90deg,
+      var(--theme-info) 100%),
+    linear-gradient(90deg,
       var(--theme-info) 10%,
       rgba(0, 0, 0, 0) 30%,
       rgba(0, 0, 0, 0) 70%,
-      var(--theme-info) 90%
-    );
+      var(--theme-info) 90%);
 }
 
-.jumbotron > .container {
+.jumbotron>.container {
   position: relative;
 }
 
