--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,8 @@ html {
   color: var(--theme-light);
   border-color: var(--theme-light);
 }
+
 .tmlib-btn-info:hover {
   background-color: rgba(255, 255, 255, 0.2);
-  color: var(--theme-light);
+  color: white;
 }
