--- a/src/main.vars.css
+++ b/src/main.vars.css
@@ -2,6 +2,6 @@
   --theme-black: #000000 !important;
   --theme-dark: #14181c !important;
   --theme-info: #17a2b8 !important;
-  --theme-light: #e3d3ff !important;
+  --theme-light: #dee9f7 !important;
   --theme-warning: #fa190c !important;
 }
