--- a/src/components/layout/Navbar.css
+++ b/src/components/layout/Navbar.css
@@ -1,9 +1,9 @@
-nav.navbar input[type=search] {
+nav.navbar input[type="search"] {
   background: rgba(255, 255, 255, 0.1);
   color: var(--theme-light);
 }
 
-nav.navbar input[type=search]::placeholder {
+nav.navbar input[type="search"]::placeholder {
   color: rgba(255, 255, 255, 0.3);
 }
 
@@ -12,15 +12,29 @@ nav.navbar .nav-link {
 }
 
 nav.navbar .nav-link:hover {
-  color: white !important
+  color: white !important;
 }
 
+nav.navbar .nav-link.active {
+  color: white !important;
+}
 
-nav.navbar .btn-username>.nav-link {
-  /* background: var(--theme-light); */
-  /* color: var(--theme-info) !important; */
-  font-weight: bold;
-  border: 2px var(--theme-light) solid;
-  border-radius: 50%;
+#avatar-image {
+  height: 50px;
   box-shadow: rgba(0, 0, 0, 0.1) 3px 3px 3px;
+}
+
+nav.navbar .dropdown-menu {
+  background-color: var(--theme-dark-lighter);
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 0px 5px;
+}
+nav.navbar .dropdown-menu > .dropdown-item {
+  color: var(--theme-dark);
+}
+nav.navbar .dropdown-menu > .dropdown-item:hover {
+  color: var(--theme-light);
+  background-color: rgba(0, 0, 0, 0.2);
+}
+nav.navbar .dropdown-menu > .dropdown-divider {
+  border-color: var(--theme-dark);
 }
