--- a/src/main.vars.css
+++ b/src/main.vars.css
@@ -1,6 +1,7 @@
 :root {
   --theme-black: #000000 !important;
   --theme-dark: #14181c !important;
+  --theme-dark-lighter: #9191a3 !important;
   --theme-info: #17a2b8 !important;
   --theme-light: #dee9f7 !important;
   --theme-warning: #fa190c !important;
