--- a/src/components/layout/Navbar.scss
+++ b/src/components/layout/Navbar.scss
@@ -3,45 +3,23 @@
 .navbar-wrapper {
   nav.navbar {
     background: $primaryColor;
+    position: relative;
 
     .container {
       display: flex;
       justify-content: space-between;
+      position: relative;
+      line-height: 3rem;
 
       .brand {
-        font-size: 2em;
+        font-size: 1.2rem;
         font-weight: bold;
         margin: auto 0;
+        z-index: 2;
       }
 
-      .linklist {
-        display: flex;
-        text-transform: lowercase;
-
-        .nav-link {
-          padding: 1em;
-          line-height: 2em;
-
-          &:hover {
-            background: darken($primaryColor, 5%);
-          }
-
-          &.active {
-            background: darken($primaryColor, 5%);
-          }
-
-          &.avatar {
-            background-image: url("https://i.pravatar.cc/50");
-            background-position: center;
-            background-repeat: no-repeat;
-            background-size: cover;
-            border-radius: 50%;
-            width: 25px;
-            height: 25px;
-            margin: auto 0 auto 1rem;
-            padding: 10px;
-          }
-        }
+      .burger {
+        font-size: 1.5rem;
       }
     }
   }
@@ -79,6 +57,66 @@
           opacity: 100;
         }
       }
+    }
+  }
+
+  .linklist {
+    text-transform: lowercase;
+    background: $primaryColor;
+    transition: height 0.5s ease-in-out;
+    height: 0;
+    line-height: 3rem;
+    overflow: hidden;
+
+    &.open {
+      height: 3rem;
+    }
+
+    .container {
+      display: flex;
+      justify-content: space-between;
+
+      .nav-link {
+        padding: 1em;
+        line-height: 1em;
+
+        &:hover {
+          background: darken($primaryColor, 5%);
+        }
+
+        &.active {
+          background: darken($primaryColor, 5%);
+        }
+
+        &.avatar {
+          background-image: url("https://i.pravatar.cc/50");
+          background-position: center;
+          background-repeat: no-repeat;
+          background-size: cover;
+          border-radius: 50%;
+          width: 17px;
+          height: 17px;
+          margin: 0.3rem 0 0.3rem 1rem;
+          padding: 10px;
+        }
+      }
+    }
+  }
+
+  @media (min-width: 768px) {
+    .linklist {
+      position: absolute;
+      top: 0px;
+      width: 100%;
+      height: 3rem;
+
+      .container {
+        justify-content: flex-end;
+      }
+    }
+
+    .burger {
+      display: none;
     }
   }
 }
