--- a/src/index.scss
+++ b/src/index.scss
@@ -19,3 +19,24 @@ a {
   width: 90%;
   margin: 0 auto;
 }
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) {
+  html {
+    font-size: 18px;
+  }
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {
+  .container {
+    width: 80%;
+  }
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {
+  .container {
+    width: 60%;
+  }
+}
