Movie Details begonnen + einige umbauten

--- a/src/components/layout/CircularProgressbar.scss
+++ b/src/components/layout/CircularProgressbar.scss
@@ -2,4 +2,10 @@
   svg text.CircularProgressbar-text {
     transform: translate(-28%, 10%);
   }
+
+  @media (min-width: 768px) {
+    svg path {
+      stroke-width: 7;
+    }
+  }
 }
