--- a/src/components/layout/Searchfield.scss
+++ b/src/components/layout/Searchfield.scss
@@ -1,4 +1,4 @@
-@import "../../main.vars.scss";
+@import "../../CSS/main.vars.scss";
 
 .searchfield {
   background-color: $lightColor;
@@ -29,7 +29,7 @@
       color: inherit;
       outline: none;
 
-      &:focus ~ i:last-child {
+      &:focus~i:last-child {
         opacity: 100;
       }
     }
