--- a/src/components/MovieDetails/Header/Genre/Genre.scss
+++ b/src/components/MovieDetails/Header/Genre/Genre.scss
@@ -1,16 +1,22 @@
 @import "../../../../CSS/main.vars.scss";
 
 .genre-wrapper {
-  float: left;
-  text-align: justify;
+  display: flex;
+  flex-wrap: wrap;
+  // justify-content: space-between;
 
-  >div {
-    display: inline-block;
+  >a {
     font-size: 0.5em;
     padding: 5px 10px;
-    background: #51C8A4;
-    color: #193d31;
+    background: $primaryColor;
+    color: darken($primaryColor, 30%);
     border-radius: 12px;
+    margin-top: 5px;
     margin-right: 5px;
+
+    &:hover {
+      background: darken($primaryColor, 10%);
+      cursor: pointer;
+    }
   }
 }
