--- a/src/components/MovieDetails/TabContent/Details/Details.scss
+++ b/src/components/MovieDetails/TabContent/Details/Details.scss
@@ -1,9 +1,55 @@
-.movie-details .container .details-wrapper {
-  font-size: 0.7em;
-  display: grid;
-  grid-template-columns: auto 1fr;
-  column-gap: 20px;
-  row-gap: 10px;
-  line-height: 1.2em;
+.movie-details .container {
   margin-bottom: 20px;
+
+  .details-wrapper {
+    font-size: 0.7em;
+
+    line-height: 1.2em;
+    margin-bottom: 0.5em;
+
+    .grid {
+      display: grid;
+      grid-template-columns: auto 1fr;
+      column-gap: 1em;
+      row-gap: 10px;
+    }
+
+    .links-wrapper {
+      .templates {
+        width: 0;
+        height: 0;
+      }
+
+      .inner {
+        font-size: 3em;
+        margin-bottom: 0.5em;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        .insta path {
+          fill: url(#instaGradient);
+        }
+      }
+    }
+
+    .trailer-wrapper {
+      margin-top: 0.5em;
+
+      .trailer {
+        position: relative;
+        width: 100%;
+        height: 0;
+        padding-bottom: 56.25%;
+
+        iframe {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+        }
+      }
+    }
+  }
 }
