Media Querys auf Web

--- a/src/CSS/main.vars.scss
+++ b/src/CSS/main.vars.scss
@@ -17,3 +17,7 @@ $secondaryColor: hsla(36, 100, 61, 1);
 $lightColor: hsla(221, 41, 93, 1);
 $darkColor: hsla(200, 44, 34, 1);
 $darkerColor: hsla(210, 5, 14, 1);
+
+$mediaM: 768px;
+$mediaL: 992px;
+$mediaXL: 1200px;
