--- a/src/components/MovieDetails/TabContent/Details/Details.scss
+++ b/src/components/MovieDetails/TabContent/Details/Details.scss
@@ -1,5 +1,5 @@
 .movie-details .container {
-  margin-bottom: 20px;
+  // margin-bottom: 20px;
 
   .details-wrapper {
     font-size: 0.7em;
@@ -13,7 +13,7 @@
       column-gap: 1em;
       row-gap: 10px;
 
-      .countries > div > span:first-child {
+      .countries>div>span:first-child {
         margin-right: 5px;
       }
 
