--- a/src/components/MovieDetails/Footer/Footer.scss
+++ b/src/components/MovieDetails/Footer/Footer.scss
@@ -30,3 +30,38 @@
     clip-path: polygon(0 0%, 100% 20%, 100% 23%, 0% 3%);
   }
 }
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: $mediaM) {
+  .movie-details footer {
+    height: 500px;
+  }
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: $mediaL) {}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: $mediaXL) {
+  .movie-details footer {
+
+    .border-top {
+      // clip-path: polygon(0 68%, 100% 88%, 100% 90%, 0% 70%);
+      // clip-path: polygon(0 0%, 100% 20%, 100% 23%, 0% 3%);
+    }
+
+    .backdrop {
+      width: 80%;
+      margin: auto;
+
+      &:after {
+        content: " ";
+        display: block;
+        position: relative;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(90deg, $darkerColor 0%, rgba(0, 0, 0, 0) 20%), linear-gradient(270deg, $darkerColor 0%, rgba(0, 0, 0, 0) 20%);
+      }
+    }
+  }
+}
