--- a/src/components/MovieDetails/Header/Rating/Rating.scss
+++ b/src/components/MovieDetails/Header/Rating/Rating.scss
@@ -8,7 +8,7 @@
   justify-items: center;
 
   .tmdb-rating {
-    width: 40px
+    width: 2.5em;
   }
 
   .own-rating {
@@ -22,3 +22,12 @@
     color: rgba(255, 255, 255, 0.7)
   }
 }
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: $mediaM) {}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: $mediaL) {}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: $mediaXL) {}
