--- a/src/components/MovieDetails/ShortDetails/ShortDetails.scss
+++ b/src/components/MovieDetails/ShortDetails/ShortDetails.scss
@@ -1,25 +1,86 @@
+@import "../../../CSS/main.vars.scss";
+
 .movie-details .shortdetails-wrapper {
-  display: flex;
-  margin: 15px 0;
-  justify-content: space-between;
-  align-items: center;
+  padding: 15px 0;
 
-  .release_date {
+  .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 
-    >div {
-      display: flex;
-      align-items: center;
+    .__react_component_tooltip {
+      display: block;
+    }
 
-      >span.date {
-        font-size: 0.8em;
-        padding-top: 3%;
-        margin: 0 5px;
+    .label {
+      display: none;
+    }
+
+    .release_date {
+
+      .flag-icon {
+        margin-right: 5px;
+      }
+
+      .note {
+        width: 10px;
+        height: 1em;
+      }
+    }
+  }
+}
+
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: $mediaM) {
+  .movie-details .shortdetails-wrapper {
+    background: $primaryColor;
+    margin: 20px 0;
+    color: black;
+
+    .container {
+      .__react_component_tooltip {
+        display: none;
+      }
+
+      .flag-icon {
+        line-height: 2em;
+        width: 2em;
+      }
+
+      .label {
+        display: none;
+      }
+    }
+  }
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: $mediaL) {
+  .movie-details .shortdetails-wrapper {
+    .container {
+      .label {
+        display: none;
+      }
+    }
+  }
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: $mediaXL) {
+  .movie-details .shortdetails-wrapper {
+    .container {
+      >div {
+        display: flex;
+        align-items: center;
+
+        .label {
+          display: block;
+          margin-right: 5px;
+        }
       }
     }
 
-    .note {
-      width: 10px;
-      height: 1em;
-    }
+
   }
 }
