Login Form with auth

--- a/src/CSS/index.scss
+++ b/src/CSS/index.scss
@@ -4,6 +4,10 @@
 @import "./reset.scss";
 @import "./main.vars.scss";
 
+* {
+  box-sizing: border-box;
+}
+
 body,
 html {
   background-color: $darkerColor;
