Aufräumen & Eingenes Input Element

--- a/src/CSS/index.scss
+++ b/src/CSS/index.scss
@@ -12,6 +12,7 @@ body,
 html {
   background-color: $darkerColor;
   font-family: "Montserrat", sans-serif;
+  color: $lightColor;
 }
 
 a {
@@ -20,48 +21,8 @@ a {
 }
 
 .container {
-  width: 90%;
+  width: 70%;
   margin: 0 auto;
-}
-
-// Small devices (mobile, 768px and lower)
-@media (max-width: 768px) {
-  .hide-s {
-    display: none;
-  }
-}
-
-// Medium devices (tablets, 768px and up)
-@media (min-width: 768px) {
-  html {
-    font-size: 18px;
-  }
-
-  .hide-m {
-    display: none;
-  }
-}
-
-// Large devices (desktops, 992px and up)
-@media (min-width: 992px) {
-  .container {
-    width: 80%;
-  }
-
-  .hide-l {
-    display: none;
-  }
-}
-
-// Extra large devices (large desktops, 1200px and up)
-@media (min-width: 1200px) {
-  .container {
-    width: 60%;
-  }
-
-  .hide-xl {
-    display: none;
-  }
 }
 
 
